--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "prop-types": "^15.6.0",
     "react-search-input": "^0.11.3",
     "react-styleguidist": "^6.0.32",
+    "styled-components": "^2.2.3",
     "svg-sprite-loader": "^3.4.1",
     "svgo": "^1.0.3",
     "svgo-loader": "^2.0.0"
