--- a/package.json
+++ b/package.json
@@ -93,12 +93,14 @@
   },
   "devDependencies": {
     "classnames": "^2.2.5",
+    "polished": "^1.9.0",
     "prop-types": "^15.6.0",
     "react-search-input": "^0.11.3",
     "react-styleguidist": "^6.0.32",
     "styled-components": "^2.2.3",
     "svg-sprite-loader": "^3.4.1",
     "svgo": "^1.0.3",
-    "svgo-loader": "^2.0.0"
+    "svgo-loader": "^2.0.0",
+    "uigradients": "^0.2.1"
   }
 }
